Allow updating clipboard from a client that has pointer focus

Allows pasting when a client has not keyboard focus but it's possible to select
and copy text with the mouse for example.
BUG:434675